--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </nav>
     <main>
         <section class="absolute z-0">
-            <img src="img/VE-es-20230605-popsignuptwoweeks-perspective_alpha_website_large.jpg" class="h-screen min-w-[800px]" alt="fondo">
+            <img src="img/VE-es-20230605-popsignuptwoweeks-perspective_alpha_website_large.jpg" class="h-screen min-w-[800px] w-[100vw]" alt="fondo">
             <div class="absolute z-10 bg-gradient-to-r from-[#040027] to-transparent/30  w-[100%] h-[100%]"></div>
             <div class="absolute z-10 bg-gradient-to-t from-[#040027]/80 to-transparent  w-[100%] h-[100%]"></div>
         </section>
