--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
     <nav class="flex h-[86px] justify-between items-center py-[23px] px-[0px] bg-transparent relative z-20 mb-[7%] min-[420px]:px-[10px] sm:px-[20px] md:px-[50px]">
         <img src="./img/Netflix_Logo.png" class="h-[30px] sm:h-[40px] " alt="logo">
         <div class="flex justify-center items-center gap-4"> 
-            <div class="bg-opacity-60 bg-black border border-[#808080] rounded w-[8rem] h-[2rem] pb-[3px] flex justify-center items-center focus-within:border-[#fff] focus-within:border-2">
+            <div class="bg-opacity-60 bg-black border border-[#808080] rounded w-[2.5rem] sm:w-[8rem] h-[2rem] pb-[3px] flex justify-center items-center focus-within:border-[#fff] focus-within:border-2">
                 <span class="material-symbols-outlined">
                     language
                 </span>
-            <select name="lenguage" id="lenguage" class=" bg-transparent focus:outline-none content-[' ']">
+            <select name="lenguage" id="lenguage" class=" bg-transparent focus:outline-none w-3 sm:w-full">
                 <!-- <option selected disabled class="hidden"></option> -->
-                <option value="es-Ve" class="checked:hidden" >Español</option>
+                <option value="es-Ve" class="sm:content-['']" >Español</option>
                 <option value="en-Ve" >Ingles</option>
             </select>
             </div>
