--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     language
                 </span>
             <select name="lenguage" id="lenguage" class=" bg-transparent focus:outline-none w-3 sm:w-full">
-                <!-- <option selected disabled class="hidden"></option> -->
+                <option selected disabled class="hidden"></option>
                 <option value="es-Ve" class="sm:content-['']" >Español</option>
                 <option value="en-Ve" >Ingles</option>
             </select>
